package supermarket.users;

public class Manager extends User {
    public Manager(String firstName, String lastName, String username, String password) {
        super(firstName, lastName, username, password, "manager");
    }
}
